syntax = "proto3";

package payment;

option go_package = "MarketShop/cmd/payment;payment";

service PaymentService {
  rpc ListPaymentDetails (EmptyRequest) returns (ListPaymentDetailsResponse);
}

message PaymentDetail {
  int64 id = 1;
  int64 order_id = 2;
  int64 payment_id = 3;
  int64 status_id = 4;
  string status_name = 5; // Add status name field
}

message EmptyRequest {}

message ListPaymentDetailsResponse {
  repeated PaymentDetail paymentDetails = 1;
}
